Added spaces to a post

--- a/_posts/2016-01-02-goodbye-2015.md
+++ b/_posts/2016-01-02-goodbye-2015.md
@@ -16,31 +16,41 @@ before the end of the year 2016 and that is not my intention. So here I am going
 social network [Goodreads](https://www.goodreads.com/challenges/3082-2015-reading-challenge).
 I read 25 books in 2015. I am feeling accomplished here. Most of the books I read
 this year were self improvement books. 
+
 - ***ViM*** Technically, the best acheivement of the last year was ViM. I won't say
 that I became expert in ViM because no one can be expert in ViM in one year, but I'm
 using this awesome editor for actual coding. I am writing this post too in ViM. I even 
 have a personal [vimrc](https://github.com/amandogra/myVim) file too. I'll use more of it in the coming year.
+
 - ***CAS*** Although this is an acheivement of the team but this year we released a new
 version of 'Contact Apple Support' application. (Yes! I work at Apple). The great author
 'Robin Sharma' in his novel 'Leader who had no title' says, “I’ve learned about
 leadership is that leaders are those individuals who do the things that failures aren’t willing to do—even though they might not like doing them either. They have the discipline to do what they know to be important—and right—versus what’s easy and fun.” 
 I'll continue to do the things that are important and right.
+
 - ***NodeJS*** To learn any new technology you have to create a small app using it.
 I created [krishnaTV](https://github.com/amandogra/krishnaTV) and [mileage](https://github.com/amandogra/mileage) using nodeJS (MEAN technologies specifically). In the office too,
 we created CAS using AngularJS. So this all taught me NodeJS, Angular, Express and MongoDB (a bit).
 I am on the path of becoming a full stack engineer.
+
 - ***Jekyll*** I did about 53 contributions last year to GitHub. Spending so much time on GitHub also taught me how to host github pages. While learning that I also learnt Jekyll. This website is made using the same framework.
+
 - ***Digital Ocean*** I learnt how to use a VHS service by hosting both [KrishnaTV](http://104.131.183.137:9000/) and [mileage](http://104.131.183.137:3000/)
 on Digital ocean.
+
 - ***Wake up early*** This is something which I trying to acheive for many years but till
 now am not been able to make it a habit. I'll try once more this year. This year I read an awesome book [The Miracle Morning](http://www.amazon.com/dp/0979019710/?tag=googhydr-20&hvadid=77022799356&hvpos=1t1&hvexid=&hvnetw=g&hvrand=12675673838974356394&hvpone=&hvptwo=&hvqmt=b&hvdev=c&ref=pd_sl_6bmsval8u_b) by Hal Elrod, I would like to implement all the advices mentioned in the book.
+
 - ***Read more*** This years goodreads goal setting has given me confidence that it can be done. 
 For the year of 2016, I have added another goal to read 25 books in this year.
+
 - ***Write*** After marriage I haven't wrote much. Before that I used to mantain a journal.
 I have to get into the habit of journaling.
-- ***Exersice*** This is something, I have never done but I have learnt that this
+
+- ***Exercise*** This is something, I have never done but I have learnt that this
 is very important for a healthy life. By the end of this year, I want to be able to
 run 5 miles in a single run.
+
 - ***Meditation*** I do that everyday before going to sleep. I would like to continue
 that in the new year too. I will bring out time in the morning too for the same.
 
