Updated the design for the home page. Added the pagination to the blog posts

--- a/_posts/2016-01-02-goodbye-2015.md
+++ b/_posts/2016-01-02-goodbye-2015.md
@@ -6,12 +6,10 @@ summary:    What did I learn in the year of 2015
 categories: personal
 ---
 
-
-
 2015 was the year of learning, just like any year before that. If I sit down to 
 write down all the things which I learned in this year, I won't be able to finish this post
 before the end of the year 2016 and that is not my intention. So here I am going to jot down the biggest learnings/achievements of the year.
-
+<!--more-->
 - ***Goodreads goal*** Last year (2015) I resoluted to read 20 books. I added this as a goal in the readers'
 social network [Goodreads](https://www.goodreads.com/challenges/3082-2015-reading-challenge).
 I read 25 books in 2015. I am feeling accomplished here. Most of the books I read
